--- a/style.css
+++ b/style.css
@@ -9,12 +9,10 @@
 .container{
 	width: 100%;
 	height: 100vh;
-	/*background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.6)),url(./images/bg1.jpeg);*/
-	/*background-position: center;*/
-	/*background-repeat: no-repeat;*/
-	background-size: cover;
-	background-color: #cc683c;
-	
+	background: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.6)),url(./images/bg1.jpeg) no-repeat center;
+	/*background-position: center;
+	background-repeat: no-repeat;*/
+	background-size: cover;	
 }
 
 .banner{
@@ -27,11 +25,10 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	display: none;
 }
 
 .banner-heading{
-	font-size: 70px;
+	font-size: 60px;
 	border-top: 5px solid #fff;
 	border-bottom: 5px solid #fff;
 	font-family: 'Roboto', sans-serif;
@@ -89,6 +86,8 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%,-50%);
+	opacity: 0;
+	visibility: hidden;
 }
 
 .sign-in-form{
@@ -207,3 +206,6 @@
 	color: #262626;
 	font-size: 26px;
 }
+
+
+
